--- a/Projekty Zaliczeniowe/Projekt 1/styl_glownej.css
+++ b/Projekty Zaliczeniowe/Projekt 1/styl_glownej.css
@@ -34,12 +34,9 @@ body, html {
     flex: 1;
     text-align: center;
     display: flex;
-}
-
-.bar-title h1 {
-    margin: auto;
-    text-align: center;
     color: #fff;
+    font-size: 32px;
+    font-weight: bold;
 }
 
 .tab-container {
@@ -87,6 +84,7 @@ body, html {
 
 .container {
     width: 100%;
+    height: 100%;
     display: flex;
     flex-direction: row;
 }
@@ -97,7 +95,7 @@ body, html {
 
 .content iframe {
     width: 100%;
-    height: 800px;
+    height: 2500px;
 }
 
 footer {
@@ -105,6 +103,9 @@ footer {
     color: white;
     padding: 20px 0;
     text-align: center;
+    left: 0;
+    bottom: 0;
+    width: 100%;
 }
 
 .footer-title {
