--- a/Projekty Zaliczeniowe/Projekt 1/styl_glownej.css
+++ b/Projekty Zaliczeniowe/Projekt 1/styl_glownej.css
@@ -26,12 +26,16 @@ body, html {
 
 .spacer {
     margin-bottom: 5px;
-    min-width: 20%;
     max-width: 40%;
 }
 
+.small_title {
+    display: none;
+    color: #fff;
+    font-weight: bold;
+}
+
 .bar-title {
-    flex: 1;
     text-align: center;
     display: flex;
     color: #fff;
@@ -40,7 +44,6 @@ body, html {
 }
 
 .tab-container {
-    flex: 1;
     text-align: right;
     display: flex;
     justify-content: flex-end;
@@ -95,7 +98,20 @@ body, html {
 
 .content iframe {
     width: 100%;
-    height: 2500px;
+}
+
+.sidebar {
+    width: 20%; 
+    margin-top: 30px; 
+    margin-bottom: 30px; 
+    margin-right: 5px
+}
+
+.sidebar .main-content {
+    margin-bottom: 30px; 
+    color: #e0dfdf; 
+    background-color: #333; 
+    border-radius: 10px;
 }
 
 footer {
@@ -118,4 +134,37 @@ footer {
     text-decoration: none;
     margin: 0 10px;
     font-size: 24px;
+}
+
+@media screen and (max-width: 768px) {
+    .filler {
+        min-height: 120px;
+    }
+
+    .small_title {
+        display: inline;
+        margin-left: 20px;
+    }
+
+    .bar-title {
+        display: none;
+    }
+
+    .container {
+        display: flex;
+        flex-direction: column;
+    }
+
+    .content {
+        padding: 10px;
+    }
+
+    .main-content {
+        width: 100%;
+    }
+
+    .sidebar {
+        width: 93%;
+        margin-left: 20px;
+    }
 }
